--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 body{
     font-family: 'Roboto', sans-serif;
-    background:url("bus.png");
+    background:url("bus-min.png");
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: scroll;
