--- a/style.css
+++ b/style.css
@@ -5,13 +5,15 @@
     text-decoration: none;
     list-style-type: none;
 }
-body{
+.body{
     font-family: 'Roboto', sans-serif;
     background:url("bus.png");
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: scroll;
     background-size: cover;
+    height: 650px;
+
 }
 nav{
     height: 50px;
@@ -33,6 +35,7 @@ nav ul li a{
     padding: 10px;
     text-transform: uppercase;
     margin-left: 30px;
+    text-decoration: none;
 }
 nav ul li a:hover, a.active{
     background-color: #52AF3A;
@@ -122,4 +125,16 @@ nav ul li a:hover, a.active{
 .amount{
     display: flex;
     justify-content: space-between;
+}
+#massage-area{
+    display: none;
+    margin-top: 200px;
+    margin-left: 300px;
+    padding: 50px;
+    width: 50%;
+    border: 2px solid black;
+    border-radius: 10px;
+    background-color: rgb(96, 150, 80);
+    color: white;
+    text-align: center;
 }
