--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     background-position: center center;
     background-attachment: scroll;
     background-size: cover;
-    height: 650px;
+    height: auto;
 
 }
 nav{
